--- a/.github/workflows/manual-deploy-to-development.yml
+++ b/.github/workflows/manual-deploy-to-development.yml
@@ -51,9 +51,9 @@ jobs:
 
           # 前回のタグを取得
           PREV_TAG=$(git describe --tags --abbrev=0 ${{ env.TAG_NAME }}^)
-          
+
           # リリースノートを生成
-          NOTES=$(gh api repos/${{ github.repository }}/releases/generate-notes -F tag_name=$TAG -F previous_tag_name=$PREV_TAG --jq .body)
-          
+          NOTES=$(gh api repos/${{ github.repository_owner }}/${{ github.repository }}/releases/generate-notes -F tag_name=${{ env.TAG_NAME }} -F previous_tag_name=$PREV_TAG --jq .body)
+
           # リリースを作成
           gh release create $TAG -t $TAG -n "$NOTES"
