--- a/.github/workflows/manual-deploy-to-development.yml
+++ b/.github/workflows/manual-deploy-to-development.yml
@@ -33,6 +33,15 @@ jobs:
             exit 1
           fi
 
+      - name: Check if the tag is newer than the latest tag
+        run: |
+          git fetch --all --tags
+          LATEST_TAG=$(git tag --sort=-creatordate | head -n 1)
+          if [ -n "$LATEST_TAG" ] && [ "$(git rev-list -n 1 $LATEST_TAG)" = "$(git rev-list -n 1 ${{ env.TARGET_REF }})" ]; then
+            echo "The tag is not newer than the latest tag."
+            exit 1
+          fi
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
