--- a/.github/workflows/manual-deploy-to-development.yml
+++ b/.github/workflows/manual-deploy-to-development.yml
@@ -68,14 +68,14 @@ jobs:
       
           if [ -z "$PREV_TAG" ]; then
             # 前のタグが見つからない場合、最初のコミットからのリリースノートを生成
-            NOTES=$(gh api repos/${{ github.repository }}/releases/generate-notes -F tag_name=${{ env.TAG_NAME }} --jq .body)
+            NOTES=$(gh api repos/${{ github.repository }}/releases/generate-notes --field tag_name=${{ env.TAG_NAME }} --jq .body)
             echo "No previous tag found. Generating release notes from the first commit."
           else
             # 前のタグが見つかった場合、そのタグからのリリースノートを生成
-            NOTES=$(gh api repos/${{ github.repository }}/releases/generate-notes -F tag_name=${{ env.TAG_NAME }} -F previous_tag_name=$PREV_TAG --jq .body)
+            NOTES=$(gh api repos/${{ github.repository }}/releases/generate-notes --field tag_name=${{ env.TAG_NAME }} --field previous_tag_name=$PREV_TAG --jq .body)
             echo "Generating release notes from $PREV_TAG to ${{ env.TAG_NAME }}"
           fi
       
           # リリースを作成（タグを明示的に指定）
-          gh release create ${{ env.TAG_NAME }} --target ${{ env.TARGET_REF }} -t "${{ env.TAG_NAME }}" -n "$NOTES"
+          gh release create ${{ env.TAG_NAME }} --target ${{ env.TARGET_REF }} --title "${{ env.TAG_NAME }}" --notes "$NOTES"
           echo "Release created."
