--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -23,6 +23,7 @@ jobs:
         id: branch-deploy
         with:
           trigger: ".deploy"
+          environment: "DEVELOPMENT"
 
       # Run your deployment logic for your project here - examples seen below
 
