--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -29,6 +29,7 @@ jobs:
 
       # Checkout your projects repository based on the ref provided by the branch-deploy step
       - uses: actions/checkout@v3
+        if: ${{ steps.branch-deploy.outputs.continue == 'true' }}
         with:
           ref: ${{ steps.branch-deploy.outputs.ref }}
 
